fix: footer hiding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ html {
   height: -webkit-fill-available;
 }
 
-.body {
+body {
   background-color: var(main-color);
   height: -webkit-fill-available;
 }
